Side Nav Mapped

--- a/index.html
+++ b/index.html
@@ -4,25 +4,78 @@
     <title>FuncGodot Manual</title>
     <link rel="icon" type="image/x-icon" href="images/godot_ranger.svg">
     <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="scripts.js"></script>
 </head>
 <body>
+    <!-- Header Begin -->
+    <div class="head"><img src="images/godot_ranger.svg" height="80px"></div>
+    <!-- Header End -->
+
+    <!-- Sidebar Navigation Begin -->
     <div class="sidenav">
-        <a href="index.html">What <i>IS</i> FuncGodot?</a><br><br>
-        <a href="index.html">Getting Started</a><br><br>
-        <a href="index.html">FuncGodot FGD Resources</a>
-        <ul class="sidenav_list">
-            <li><a href="#">FuncGodot FGD File</a></li>
-            <li><a href="#">FuncGodot FGD Entity Class</a></li>
-            <li><a href="#">FuncGodot FGD Base Class</a></li>
-            <li><a href="#">FuncGodot FGD Solid Class</a></li>
-        </ul>
-        <a href="index.html">TrenchBroom Resources</a>
-        <ul class="sidenav_list">
-            <li><a href="#">TrenchBroom Game Config</a></li>
-            <li><a href="#">TrenchBroom Tag</a></li>
-            <li><a href="#">TrenchBroom FGD Model Point Class</a></li>
-        </ul><br>
+        <br>
+        <a href="index.html">What <i>IS</i> FuncGodot?</a><br>
+        <h3 class="sidenav">Getting Started</h3>
+        <p class="sidenav">
+            <a href="#">Project Configuration</a><br>
+            <a href="#">Forge Game Data</a><br>
+            <a href="#">Textures</a><br>
+        </p>
+        <p class="sidenav2">
+            <a href="#">Default Material</a><br>
+            <a href="#">Clip and Skip</a><br>
+            <a href="#">WAD Files</a><br>
+        </p>
+        <p class="sidenav"><a href="#">Map Editor Configuration</a><br></p>
+        <p class="sidenav2">
+            <a href="#">TrenchBroom</a><br>
+            <a href="#">J.A.C.K.</a><br>
+            <a href="#">NetRadiant</a><br>
+        </p>
+        <p class="sidenav"><a href="#">Building Maps</a></p>
+
+        <h3 class="sidenav">Class Reference</h3>
+        <p class="sidenav">
+            <a href="#">FuncGodot Project Config</a><br>
+            <a href="#">FuncGodot FGD Resources</a>
+        </p>
+        <p class="sidenav2">
+            <a href="#">FuncGodot FGD File</a><br>
+            <a href="#">FuncGodot FGD Entity Class</a><br>
+            <a href="#">FuncGodot FGD Base Class</a><br>
+            <a href="#">FuncGodot FGD Solid Class</a>
+        </p>
+
+        <p class="sidenav"><a href="#">TrenchBroom Resources</a></p>
+        <p class="sidenav2">
+            <a href="#">TrenchBroom Game Config</a><br>
+            <a href="#">TrenchBroom Tag</a><br>
+            <a href="#">TrenchBroom FGD Model Point Class</a>
+        </p>
+        
+        <p class="sidenav"><a href="#">FuncGodot Map</a></p>
+        <p class="sidenav2">
+            <a href="#">FuncGodot Map Settings</a>
+        </p>
+        <h3 class="sidenav">Core</h3>
+        <p class="sidenav">
+            <a href="#">FuncGodot</a><br>
+            <a href="#">Map Data</a><br>
+            <a href="#">Map Parser</a><br>
+            <a href="#">Geo Generator</a><br>
+            <a href="#">Surface Gatherer</a>
+        </p>
+        <h3 class="sidenav">Additional Resources</h3>
+        <p class="sidenav">
+            <a href="#">Godot and FuncGodot</a><br>
+            <a href="#">TrenchBroom and Quake</a><br>
+            <a href="#">J.A.C.K. and Half-Life</a><br>
+            <a href="#">Useful Tools</a><br>
+        </p>
+        <h3 class="sidenav"><a href="#">Frequently Asked Questions</a></h3>
+        <h3 class="sidenav"><a href="#">Join the FuncGodot Discord!</a></h3>
     </div>
+    <!-- Sidebar Navigation End -->
 
     <div class="main">
         <h1 style="text-align:center;"><img src="images/godot_ranger.svg" alt="FuncGodot Ranger" height="128"><br>What <i>IS</i> FuncGodot?</h1>
@@ -50,5 +103,9 @@
             Understanding this concept will hopefully put you on the right path forward to being able to use this wonderfully flexible tool to make some incredible games.
         </p>
     </div>
+
+    <script>
+        w3IncludeHTML();
+    </script>
 </body>
 </html>
