--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Header Begin -->
-    <div class="head"><img src="images/godot_ranger.svg" height="80px"></div>
+    <div class="head"><img src="images/godot_ranger.svg" height="50px"><img src="images/logo_white.png" height="40px"></div>
     <!-- Header End -->
 
     <!-- Sidebar Navigation Begin -->
