Fixed Sidebar, Added Pages, Templated

--- a/setup_fgd.html
+++ b/setup_fgd.html
@@ -80,30 +80,7 @@
     <!-- Sidebar Navigation End -->
 
     <div class="main">
-        <h1 style="text-align:center;"><img src="images/godot_ranger.svg" alt="FuncGodot Ranger" height="128"><br>What <i>IS</i> FuncGodot?</h1>
-        <p>
-            <a href="https://github.com/func-godot/func_godot_plugin" target="_blank"><b>FuncGodot</b></a> is a plugin for <a href="https://godotengine.org/" target="_blank"><b>Godot 4</b></a> 
-            that allows users to generate Godot scenes using the <a href="https://quakewiki.org/wiki/Quake_Map_Format" target="_blank"><b>Quake MAP file format</b></a>. 
-            Map files can be made in a variety of editors, the most commonly recommended one being <a href="https://trenchbroom.github.io/" target="_blank"><b>TrenchBroom</b></a>. 
-            It is a reworking and rewrite of the <a href="https://github.com/QodotPlugin/Qodot" target="_blank"><b>Qodot</b></a> plugin for Godot 3 and 4.
-        </p>
-        <p>
-            <h3><i>It is <em>not</em> a BSP Compiler.</i></h3>
-            FuncGodot does not compile maps into BSP files. It has no concept of vis, no concept of lit, no concept of bsp. It will not automatically cull faces. 
-            Godot does not work like the early BSP engines. You cannot use FuncGodot to map for Godot the same way you map for Quake. What you map is what you get. 
-            This makes it more consistent and reliable than a compiled BSP, since you get to choose what faces get culled, how your mesh is separated, and how your 
-            collision is generated.
-        </p>
-        <p>
-            <h3><i>FuncGodot is, at its core, an <em>interpreter</em>.</i></h3>
-            FuncGodot is a map parser and geometry generator, utilizing entity definition resources in order to translate map files' entities and their properties 
-            into Godot nodes and packed scenes. It can be used for purposes as simple as only generating CSG geometry from the map file to purposes as complex as 
-            completing your entire level in your chosen map editor and only needing to click build in Godot. How much FuncGodot builds for you is dependent on 
-            how much work you put into defining how to build your maps. What you put in is what you get out.
-        </p>
-        <p>
-            Understanding this concept will hopefully put you on the right path forward to being able to use this wonderfully flexible tool to make some incredible games.
-        </p>
+        <h1>Forge Game Data</h1>
     </div>
 </body>
 </html>
