--- a/pages/nav.html
+++ b/pages/nav.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html lang="en-US">
-<head>
-    <title>FuncGodot Manual</title>
-    <link rel="icon" type="image/x-icon" href="images/godot_ranger.svg">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
     <!-- Header Begin -->
-    <div class="head"><img src="images/godot_ranger.svg" height="50px"><img src="images/logo_white.png" height="40px"></div>
+    <div class="head"><img src="../images/godot_ranger.svg" height="50px"><img src="../images/logo_white.png" height="40px"></div>
     <!-- Header End -->
 
     <!-- Sidebar Navigation Begin -->
     <div class="sidenav">
-        <a href="index.html">What <i>IS</i> FuncGodot?</a><br>
+        <a href="../index.html">What <i>IS</i> FuncGodot?</a><br>
         <h3 class="sidenav">Getting Started</h3>
         <p class="sidenav">
+            <a href="setup_install.html">Installing FuncGodot</a><br>
             <a href="setup_project_config.html">Project Configuration</a><br>
             <a href="setup_fgd.html">Forge Game Data</a><br>
             <a href="setup_textures.html">Textures</a><br>
@@ -28,7 +21,7 @@
         <p class="sidenav2">
             <a href="setup_map_editor_config.html#TrenchBroom">TrenchBroom</a><br>
             <a href="setup_map_editor_config.html#JACK">J.A.C.K.</a><br>
-            <a href="setup_map_editor_config.html#NetRadiant">NetRadiant</a><br>
+            <a href="setup_map_editor_config.html#NetRadiantCustom">NetRadiant Custom</a><br>
         </p>
         <p class="sidenav"><a href="setup_building_maps.html">Building Maps</a></p>
 
@@ -78,9 +71,3 @@
         <a href="#"><b>Join the FuncGodot Discord!</b></a>
     </div>
     <!-- Sidebar Navigation End -->
-
-    <div class="main">
-        <h1>CORE: Surface Gatherer</h1>
-    </div>
-</body>
-</html>
