--- a/pages/header.html
+++ b/pages/header.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <div class="main">
-        <h1>FuncGodot FGD Resources</h1>
-    </div>
+    <!-- Header Begin -->
+    <div class="header"><img src="../images/godot_ranger.svg" height="50px" alt=""><img src="../images/logo_white.png" height="40px" alt="FuncGodot"></div>
+    <!-- Header End -->
 </body>
 </html>
