--- a/pages/setup_map_editor_config.html
+++ b/pages/setup_map_editor_config.html
@@ -16,16 +16,57 @@
         <h2 id="TrenchBroom" align="center"><a href="https://trenchbroom.github.io/" target="_blank">TrenchBroom</a></h2>
         <p align="center"><img src="../images/me_tb.png" alt="TrenchBroom logo" height="128px"></p>
         <p>
-            TrenchBroom is the most recommended editor for FuncGodot, with <a href="ref_trenchbroom_resources.html">multiple resources</a> dedicated to configuring it. 
+            TrenchBroom is the most commonly recommended editor for FuncGodot, with <a href="ref_trenchbroom_resources.html" target="_self">multiple resources</a> dedicated to configuring it. 
             The primary resource is the <i>TrenchBroomGameConfig</i>, with the <i>TrenchBroomTag</i> providing additional quality of life options in the editor.
         </p>
-        <p align="center"><img src="../images/ref_tb_gameconfig.png" alt="TrenchBroomGameConfig properties"></p>
-
-        <h2 id="JACK" align="center"><a href="https://jack.hlfx.ru/en/" target="_blank">J.A.C.K.</a></h2>
-        <p align="center"><img src="../images/me_jack.png" alt="J.A.C.K. logo" height="128px"></p>
         <p>
-
+            You'll need a TrenchBroom Game Config resource in order to build and export a game configuration file for TrenchBroom. Let's take a look at the resource properties:
         </p>
+        <p align="center"><img src="../images/ref_tb_gameconfig.png" alt="TrenchBroomGameConfig properties"></p>
+        <p>
+            Most of these properties should be fairly obvious in their purpose. The FGD File should be your master FGD that contains all of your other base FGDs and entities. 
+            Entity Scale only scales the display models.
+        </p>
+        <p>
+            Brush Tags and Brushface Tags are strictly for TrenchBroom and have no effect in Godot. They can affect shortcut keys and have transparency effects applied to them, 
+            along with a few other features. FuncGodot comes with a few pre-made common tags. Feel free to use them in your own GameConfig resources.
+        </p>
+        <p>
+            Exporting the Game Config will use the directory set in your <a href="setup_project_config.html" target="_self">Project Configuration's <i>Map Editor Game Config Folder</i></a>. 
+            Consult the <a href="https://trenchbroom.github.io/manual/latest/#game_configuration_files" target="_blank">TrenchBroom Manual's Game Configuration documentation</a> for 
+            more information. Once you've exported your Game Config, open up TrenchBroom and click <i>New Map</i>. You should now see your project in the games list.
+        </p>
+        <p align="center"><img src="../images/setup_me_tb_cfg_2.png" alt="TrenchBroom Config 2"></p>
+        <p>
+            You'll need to set the game path so that TrenchBroom can find your game's textures and any models if you created some for it. Open TrenchBroom's preferences 
+            and set your game's path to the one you set to <i>Map Editor Game Path</i> with the Project Configuration.
+        </p>
+        <p align="center"><img src="../images/setup_me_tb_cfg_3.png" alt="TrenchBroom Config 3"></p>
+        <p>Now you should be ready to start mapping for Godot with TrenchBroom!</p>
+        <p align="center"><img src="../images/setup_me_tb_cfg_4.png" alt="TrenchBroom Config 3" width="50%"></p>
+        <br><br>
+
+        <h2 id="JACK" align="center"><a href="https://crystice.com/jack/" target="_blank">J.A.C.K.</a></h2>
+        <p align="center"><img src="../images/me_jack.png" alt="J.A.C.K. logo" height="128px"></p>
+        <p>Due to how games are configured in J.A.C.K., FuncGodot does not have any dedicated resources for it but the process is still fairly simple.</p>
+        <p>
+            Make sure your Project Configuration's <i>Map Editor Game Config Folder</i> is pointing to your game's folder in the J.A.C.K.'s game configuration folder. 
+            When you export an FGD file, FuncGodot will print in the Godot Output where it was saved to.
+        </p>
+        <p align="center"><img src="../images/setup_me_jack_0.png" alt="J.A.C.K. Config 1"></p>
+        <p>Once exported, you'll need to add your game to the Game Configurations list. Be sure to add your newly exported FGD as well.</p>
+        <p align="center"><img src="../images/setup_me_jack_1.png" alt="J.A.C.K. Config 2" height="600px"> <img src="../images/setup_me_jack_2.png" alt="J.A.C.K. Config 3" height="600px"></p>
+        <p>Lastly you'll want to set your Base Game and Source Maps directories.</p>
+        <p align="center"><img src="../images/setup_me_jack_3.png" alt="J.A.C.K. Config 4" height="600px"></p>
+        <p>
+            When it comes to textures, something to keep in mind is that you do not have to use the same exact texture files from your project. You can set up 
+            a WAD file for use with J.A.C.K. but then in your Godot project have loose texture files and premade materials. As long as the relative texture paths match 
+            without the file extensions, FuncGodot will be able to select the correct textures. 
+            That said, FuncGodot <i>does</i> support using WAD files with your maps. Use whichever method is right for your project.
+        </p>
+        <p>And with that, you should be all set to start mapping in J.A.C.K.!</p>
+        <p align="center"><img src="../images/setup_me_jack_4.png" alt="J.A.C.K. Config 5" width="75%"></p>
+        <br><br>
 
         <h2 id="NetRadiantCustom" align="center"><a href="https://github.com/Garux/netradiant-custom" target="_blank">NetRadiant Custom</a></h2>
         <p align="center"><img src="../images/me_nrc.png" alt="NetRadiant Custom logo" height="128px"></p>
