--- a/pages/setup_project_config.html
+++ b/pages/setup_project_config.html
@@ -28,9 +28,20 @@
         </p>
         <p align="center"><img src="../images/ref_project_config.png" alt="FuncGodotProjectConfig resource inspector."></p>
         <p>
-            For the <b>Map Editor Game Config Folder</b>, you'll want to locate your map editor's game configuration or installation folder and then create a sub folder for 
+            For the <b>FGD Output Folder</b>, you'll want to locate your map editor's game configuration or installation folder and then create a sub folder for 
             your game's configuration. This might look something like <i>C:/GameDev/TrenchBroom/Games/MyGame/</i> or <i>C:/GameDev/J.A.C.K/MyGame/</i>. 
-            This tells FuncGodot where the default location to save generated configuration and FGD files.
+            This tells FuncGodot where to save generated configuration and FGD files when you click on their export button.
+        </p>
+        <p>
+            The <b>Trenchbroom Game Config Folder</b> is the location of your game's TrenchBroom Game Config folder. This might (but doesn't have to be) the same 
+            as your <i>FGD Output Folder</i>. When you export your <a href="ref_trenchbroom_resources.html#GameConfig" target="main">TrenchBroomGameConfig</a><br> resource, 
+            it will automatically export the FGD file to this folder as well, overriding the <i>FGD Output Folder</i> property.
+        </p>
+        <p>
+            The <b>Netradiant Custom Gamepack Folder</b> is a little different, in that it should point to your NetRadiant Custom's <i>gamepacks</i> folder 
+            (eg: <i>C:/GameDev/NetRadiant Custom/gamepacks/</i>). This will also override the <i>FGD Output Folder</i> when you export your 
+            <a href="ref_netradiant_custom_resources.html#GamepackConfig" target="main">NetRadiantCustomGamepackConfig</a><br> resource, 
+            as NetRadiant Custom splits up gamepack configurations across several folders and files.
         </p>
         <p>
             The <b>Map Editor Game Path</b> refers to what your Map Editor considers the location of your project. This might look something like <i>C:/GameDev/MyGodotProject/</i> 
