--- a/pages/sidenav.html
+++ b/pages/sidenav.html
@@ -48,12 +48,18 @@
             <a href="ref_trenchbroom_resources.html#Tag" target="main">TrenchBroom Tag</a><br>
             <a href="ref_trenchbroom_resources.html#ModelPoint" target="main">TrenchBroom FGD Model Point Class</a>
         </p>
+
+        <p class="sidenav"><a href="ref_netradiant_custom_resources.html" target="main">NetRadiant Custom Resources</a></p>
+        <p class="sidenav2">
+            <a href="ref_netradiant_custom_resources.html#GamepackConfig" target="main">NetRadiant Custom Gamepack Config</a><br>
+            <a href="ref_netradiant_custom_resources.html#Shader" target="main">NetRadiant Custom Shader</a><br>
+        </p>
         
         <p class="sidenav"><a href="ref_func_godot_map.html" target="main">FuncGodot Map</a></p>
         <p class="sidenav2">
             <a href="ref_func_godot_map.html#MapSettings" target="main">FuncGodot Map Settings</a>
         </p>
-        <h3 class="sidenav">Core</h3>
+        <h3 class="sidenav">Core Classes</h3>
         <p class="sidenav">
             <a href="core_func_godot.html" target="main">FuncGodot</a><br>
             <a href="core_map_data.html" target="main">Map Data</a><br>
