Getting Started Section Complete

--- a/pages/setup_textures.html
+++ b/pages/setup_textures.html
@@ -72,6 +72,10 @@
             of the <i>Default Material</i> and apply the Texture2D as the duplicated material's albedo.
         </p>
         <p>
+            If it does not find the Texture2D, then it will use the <i>default_texture.png</i> found in the <i>addons/func_godot/textures/</i> folder.
+        </p>
+        <p align="center"><img src="../images/default_texture.png" alt="Default texture" height="200"></p>
+        <p>
             Once the material generation is completed, you can optionally have FuncGodot save generated materials so they can be reused by multiple FuncGodotMaps. 
             Otherwise each FuncGodotMap will have its own unique material for each texture used in the map.
         </p>
