--- a/pages/start.html
+++ b/pages/start.html
@@ -15,6 +15,11 @@
             It is a reworking and rewrite of the <a href="https://github.com/QodotPlugin/Qodot" target="_blank"><b>Qodot</b></a> plugin for Godot 3 and 4.
         </p>
         <p>
+            <h3><i>It is <em>not</em> a framework.</i></h3>
+            FuncGodot will not make your game for you. FuncGodot does not make doors, it does not make players, it does not make buttons. <i>You</i> make the entities 
+            and FuncGodot will instantiate them and apply the properties you gave to them in your map file and entity definitions: the rest is up to you.
+        </p>
+        <p>
             <h3 id="FuncGodotIsNotABspCompiler"><i>It is <em>not</em> a BSP Compiler.</i></h3>
             FuncGodot does not compile maps into BSP files. It has no concept of vis, no concept of lit, no concept of bsp. It will not automatically cull faces. 
             Godot does not work like the early BSP engines. You cannot use FuncGodot to map for Godot the same way you map for Quake. What you map is what you get. 
@@ -30,6 +35,10 @@
         </p>
         <p>
             Understanding this concept will hopefully put you on the right path forward to being able to use this wonderfully flexible tool to make some incredible games.
+        </p>
+        <p>
+            This manual assumes some familiarity with the Godot Engine and your map editor of choice. This manual will only cover them insofar as how they relate to 
+            the FuncGodot work flow.
         </p>
     </div>
 </body>
