--- a/pages/sidenav.html
+++ b/pages/sidenav.html
@@ -28,6 +28,11 @@
             <a href="setup_map_editor_config.html#NetRadiantCustom" target="main">NetRadiant Custom</a><br>
         </p>
         <p class="sidenav"><a href="setup_building_maps.html" target="main">Building Maps</a></p>
+        <p class="sidenav2">
+            <a href="setup_building_maps.html#InverseScaleFactor" target="main">Inverse Scale Factor</a><br>
+            <a href="setup_building_maps.html#TrenchbroomHierarchy" target="main">TrenchBroom Groups Hierarchy</a><br>
+            <a href="setup_building_maps.html#Building" target="main">Building</a>
+        </p>
 
         <h3 class="sidenav">Class Reference</h3>
         <p class="sidenav">
